Removed incorrectly added quotation marks.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8539,7 +8539,7 @@ python3-pyside2.qtwidgets:
 python3-pyside6-pip:
   '*':
     pip:
-      packages: ["PySide6"]
+      packages: [PySide6]
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
