add as2_platforms to humble index

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -578,6 +578,72 @@ repositories:
       url: https://github.com/pal-robotics/aruco_ros.git
       version: humble-devel
     status: developed
+  as2_platform_crazyflie:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_crazyflie.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_crazyflie.git
+      version: main
+    status: developed
+  as2_platform_dji_osdk:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_dji_osdk.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_dji_osdk.git
+      version: main
+    status: developed
+  as2_platform_dji_psdk:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_dji_psdk.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_dji_psdk.git
+      version: main
+    status: developed
+  as2_platform_mavlink:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_mavlink.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_mavlink.git
+      version: main
+    status: developed
+  as2_platform_pixhawk:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_pixhawk.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_pixhawk.git
+      version: main
+    status: developed
+  as2_platform_tello:
+    doc:
+      type: git
+      url: https://github.com/aerostack2/as2_platform_tello.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/aerostack2/as2_platform_tello.git
+      version: main
+    status: developed
   astuff_sensor_msgs:
     doc:
       type: git
