--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -5969,6 +5969,16 @@ repositories:
       url: https://github.com/ros-drivers/mocap_optitrack.git
       version: master
     status: maintained
+  mola_common:
+    doc:
+      type: git
+      url: https://github.com/MOLAorg/mola_common.git
+      version: develop
+    source:
+      type: git
+      url: https://github.com/MOLAorg/mola_common.git
+      version: develop
+    status: developed
   mongodb_store:
     doc:
       type: git
