robotraconteur: 1.2.2-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6095,6 +6095,11 @@ repositories:
       version: jazzy
     status: maintained
   robotraconteur:
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/robotraconteur-packaging/robotraconteur-ros2-release.git
+      version: 1.2.2-1
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
