robotraconteur: 1.2.2-1 in 'rolling/distribution.yaml' [bloom]

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5817,6 +5817,11 @@ repositories:
       version: rolling
     status: maintained
   robotraconteur:
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/robotraconteur-packaging/robotraconteur-ros2-release.git
+      version: 1.2.2-1
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
