--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8418,6 +8418,13 @@ python3-pyside2.qtopengl:
   ubuntu:
     '*': [python3-pyside2.qtopengl]
     bionic: null
+python3-pyside2.qtqml:
+  debian: [python3-pyside2.qtqml]
+  gentoo: [dev-python/pyside2]
+  rhel:
+    '*': [python3-pyside2]
+    '8': null
+  ubuntu: [python3-pyside2.qtqml]
 python3-pyside2.qtquick:
   arch: [pyside2]
   debian: [python3-pyside2.qtquick]
