Scoped PySide6 to specific OSes and versions.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8537,9 +8537,33 @@ python3-pyside2.qtwidgets:
     '8': null
   ubuntu: [python3-pyside2.qtwidgets]
 python3-pyside6-pip:
-  '*':
+  debian:
+    bullseye:
+      pip:
+        packages: [PySide6]
+    bookworm:
+      pip:
+        packages: [PySide6]
+  osx:
     pip:
       packages: [PySide6]
+  rhel:
+    '8':
+      pip:
+        packages: [PySide6]
+    '9':
+      pip:
+        packages: [PySide6]
+  ubuntu:
+    focal:
+      pip:
+        packages: [PySide6]
+    jammy:
+      pip:
+        packages: [PySide6]
+    noble:
+      pip:
+        packages: [PySide6]
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
