--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4247,11 +4247,20 @@ repositories:
       version: master
     status: maintained
   ompl:
+    doc:
+      type: git
+      url: https://github.com/ompl/ompl.git
+      version: main
     release:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
-      version: 1.6.0-1
+      version: 1.6.0-2
+    source:
+      type: git
+      url: https://github.com/ompl/ompl.git
+      version: main
+    status: developed
   openeb_vendor:
     doc:
       type: git
