--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3909,6 +3909,12 @@ repositories:
       url: https://github.com/AutonomyLab/libcreate.git
       version: master
     status: maintained
+  libfranka:
+    source:
+      type: git
+      url: https://github.com/frankaemika/libfranka.git
+      version: main
+    status: developed
   libg2o:
     release:
       tags:
