mola_common: 0.3.3-1 in 'noetic/distribution.yaml' [bloom]

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -5974,6 +5974,11 @@ repositories:
       type: git
       url: https://github.com/MOLAorg/mola_common.git
       version: develop
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://github.com/mrpt-ros-pkg-release/mola_common-release.git
+      version: 0.3.3-1
     source:
       type: git
       url: https://github.com/MOLAorg/mola_common.git
