--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -417,6 +417,11 @@ repositories:
       type: git
       url: https://github.com/Ekumen-OS/andino_gz.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/andino_gz-release.git
+      version: 0.1.0-1
     source:
       test_pull_requests: true
       type: git
