--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -80,6 +80,11 @@ repositories:
       type: git
       url: https://github.com/analogdevicesinc/adi_tmc_coe.git
       version: noetic
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://github.com/ros2-gbp/adi_tmcl_coe-release.git
+      version: 1.0.0-1
     source:
       type: git
       url: https://github.com/analogdevicesinc/adi_tmc_coe.git
