--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5168,6 +5168,11 @@ repositories:
       type: git
       url: https://github.com/neobotix/neo_nav2_bringup.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/neo_nav2_bringup-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/neobotix/neo_nav2_bringup.git
