added minimalmodbus pip

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7066,6 +7066,19 @@ python3-meson-pip:
   ubuntu:
     pip:
       packages: [meson]
+python3-minimalmodbus-pip:
+  debian:
+    pip:
+      packages: [minimalmodbus]
+  fedora:
+    pip:
+      packages: [minimalmodbus]
+  osx:
+    pip:
+      packages: [minimalmodbus]
+  ubuntu:
+    pip:
+      packages: [minimalmodbus]
 python3-mistune:
   alpine:
     pip:
