qml_ros2_plugin: 1.0.1-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5188,6 +5188,11 @@ repositories:
       type: git
       url: https://github.com/StefanFabian/qml_ros2_plugin.git
       version: master
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/qml_ros2_plugin-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/StefanFabian/qml_ros2_plugin.git
