add python3-easyocr to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5688,6 +5688,16 @@ python3-easydict:
     focal:
       pip:
         packages: [easydict]
+python3-easyocr:
+  debian:
+    pip:
+      packages: [easyocr]
+  fedora:
+    pip:
+      packages: [easyocr]
+  ubuntu:
+    pip:
+      packages: [easyocr]
 python3-elasticsearch:
   debian: [python3-elasticsearch]
   fedora: [python3-elasticsearch]
