--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -624,6 +624,11 @@ repositories:
       type: git
       url: https://github.com/aerostack2/as2_platform_mavlink.git
       version: main
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/as2_platform_mavlink-release.git
+      version: 1.1.0-1
     source:
       test_pull_requests: true
       type: git
