--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7559,6 +7559,7 @@ python3-openpyxl:
   fedora: [python3-openpyxl]
   gentoo: [dev-python/openpyxl]
   opensuse: [python3-openpyxl]
+  rhel: ['python%{python3_pkgversion}-openpyxl']
   ubuntu: [python3-openpyxl]
 python3-opentelemetry-api-pip:
   '*':
