as2_platform_crazyflie: 1.1.0-3 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -591,6 +591,11 @@ repositories:
       type: git
       url: https://github.com/aerostack2/as2_platform_crazyflie.git
       version: main
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/as2_platform_crazyfile-release.git
+      version: 1.1.0-3
     source:
       test_pull_requests: true
       type: git
