azure-iot-sdk-c: 1.14.0-1 in 'iron/distribution.yaml' [bloom]

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -562,10 +562,12 @@ repositories:
       url: https://github.com/Azure/azure-iot-sdk-c.git
       version: main
     release:
+      packages:
+      - azure_iot_sdk_c
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/nobleo/azure-iot-sdk-c-release.git
-      version: 1.13.0-1
+      version: 1.14.0-1
     source:
       type: git
       url: https://github.com/Azure/azure-iot-sdk-c.git
