--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1797,6 +1797,16 @@ repositories:
       url: https://github.com/foxglove/ros-foxglove-bridge.git
       version: main
     status: developed
+  foxglove_compressed_video_transport:
+    doc:
+      type: git
+      url: https://github.com/ros-misc-utilities/foxglove_compressed_video_transport.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/ros-misc-utilities/foxglove_compressed_video_transport.git
+      version: release
+    status: developed
   foxglove_msgs:
     doc:
       type: git
