--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8252,6 +8252,9 @@ python3-pyotp:
   debian: [python3-pyotp]
   fedora: [python3-pyotp]
   freebsd: [py311-pyotp]
+  rhel:
+    '*': [python3-pyotp]
+    '8': null
   opensuse: [python3-pyotp]
   ubuntu: [python3-pyotp]
 python3-pyparsing:
