snmp_diagnostics: 0.1.1-1 in 'noetic/distribution.yaml' [bloom]

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -11533,6 +11533,21 @@ repositories:
       url: https://github.com/robosoft-ai/smacc.git
       version: noetic-devel
     status: developed
+  snmp_diagnostics:
+    doc:
+      type: git
+      url: https://github.com/ctu-vras/snmp_diagnostics.git
+      version: master
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://gitlab.fel.cvut.cz/cras/ros-release/snmp_diagnostics.git
+      version: 0.1.1-1
+    source:
+      type: git
+      url: https://github.com/ctu-vras/snmp_diagnostics.git
+      version: master
+    status: developed
   snmp_ros:
     doc:
       type: git
