--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7729,9 +7729,9 @@ protobuf-dev:
   slackware: [protobuf]
   ubuntu: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
 protobuf-c-compiler:
-  debian: protobuf-c-compiler
-  fedora: protobuf-c
-  ubuntu: protobuf-c-compiler
+  debian: [protobuf-c-compiler]
+  fedora: [protobuf-c]
+  ubuntu: [protobuf-c-compiler]
 ps-engine:
   arch: [primesense-sensor]
   debian: [ps-engine]
