fix: opensuse dep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8616,7 +8616,7 @@ python3-pytest-pylint:
   fedora:
     pip:
       packages: [pytest-pylint]
-  opensuse: [python3-pytest-pylint]
+  opensuse: [python-pytest-pylint]
   osx:
     pip:
       packages: [pytest-pylint]
