spatio_temporal_voxel_layer: 2.5.1-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7770,6 +7770,10 @@ repositories:
       version: release/1.22.x
     status: maintained
   spatio_temporal_voxel_layer:
+    doc:
+      type: git
+      url: https://github.com/SteveMacenski/spatio_temporal_voxel_layer.git
+      version: jazzy
     release:
       packages:
       - openvdb_vendor
@@ -7777,7 +7781,11 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/SteveMacenski/spatio_temporal_voxel_layer-release.git
-      version: 2.5.0-1
+      version: 2.5.1-1
+    source:
+      type: git
+      url: https://github.com/SteveMacenski/spatio_temporal_voxel_layer.git
+      version: jazzy
     status: maintained
   spdlog_vendor:
     release:
