--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4123,6 +4123,7 @@ repositories:
       - nav2_dwb_controller
       - nav2_graceful_controller
       - nav2_lifecycle_manager
+      - nav2_loopback_sim
       - nav2_map_server
       - nav2_mppi_controller
       - nav2_msgs
@@ -4149,7 +4150,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/SteveMacenski/navigation2-release.git
-      version: 1.3.1-1
+      version: 1.3.2-1
     source:
       type: git
       url: https://github.com/ros-planning/navigation2.git
