update gz_ros2_control branches on rolling
Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2294,7 +2294,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: rolling
     release:
       packages:
       - gz_ros2_control
@@ -2306,7 +2306,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: rolling
     status: maintained
   gz_sensors_vendor:
     doc:
