--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5852,6 +5852,11 @@ repositories:
       version: rolling
     status: maintained
   robotraconteur:
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/robotraconteur-release.git
+      version: 1.2.2-1
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
