create3_sim: 3.0.2-2 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1077,6 +1077,27 @@ repositories:
       url: https://github.com/PickNikRobotics/cpp_polyfills.git
       version: main
     status: maintained
+  create3_sim:
+    release:
+      packages:
+      - irobot_create_common_bringup
+      - irobot_create_control
+      - irobot_create_description
+      - irobot_create_gz_bringup
+      - irobot_create_gz_plugins
+      - irobot_create_gz_sim
+      - irobot_create_gz_toolbox
+      - irobot_create_nodes
+      - irobot_create_toolbox
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/create3_sim-release.git
+      version: 3.0.2-2
+    source:
+      type: git
+      url: https://github.com/iRobotEducation/create3_sim.git
+      version: main
+    status: developed
   cudnn_cmake_module:
     doc:
       type: git
