--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3152,6 +3152,20 @@ repositories:
       url: https://github.com/ros4hri/libhri.git
       version: humble-devel
     status: developed
+  hri_actions_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros4hri/hri_actions_msgs.git
+      version: humble-devel
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros4hri/hri_actions_msgs-release.git
+      version: 2.2.0-1
+    source:
+      type: git
+      url: https://github.com/ros4hri/hri_actions_msgs.git
+      version: humble-devel
   hri_msgs:
     doc:
       type: git
