--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8617,6 +8617,18 @@ python3-pytest-mock:
       packages: [pytest-mock]
   rhel: ['python%{python3_pkgversion}-pytest-mock']
   ubuntu: [python3-pytest-mock]
+python3-pytest-pylint:
+  arch:
+    pip:
+      packages: [pytest-pylint]
+  debian: [python3-pytest-pylint]
+  fedora:
+    pip:
+      packages: [pytest-pylint]
+  osx:
+    pip:
+      packages: [pytest-pylint]
+  ubuntu: [python3-pytest-pylint]
 python3-pytest-ruff-pip:
   debian:
     pip:
