Add PySide6 system packages for Ubuntu Oracular & Debian Sid.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8536,7 +8536,7 @@ python3-pyside2.qtwidgets:
     '*': [python3-pyside2]
     '8': null
   ubuntu: [python3-pyside2.qtwidgets]
-python3-pyside6-pip:
+python3-pyside6:
   debian:
     bookworm:
       pip:
@@ -8544,6 +8544,7 @@ python3-pyside6-pip:
     bullseye:
       pip:
         packages: [PySide6]
+    sid: [libpyside6-dev]
   osx:
     pip:
       packages: [PySide6]
@@ -8564,6 +8565,52 @@ python3-pyside6-pip:
     noble:
       pip:
         packages: [PySide6]
+    oracular: [libpyside6-dev]
+python3-pyside6.qtasyncio:
+  debian:
+    sid: [python3-pyside6.qtasyncio]
+  ubuntu:
+    oracular: [python3-pyside6.qtasyncio]
+python3-pyside6.qtcharts:
+  debian:
+    sid: [python3-pyside6.qtcharts]
+  ubuntu:
+    oracular: [python3-pyside6.qtcharts]
+python3-pyside6.qtconcurrent:
+  debian:
+    sid: [python3-pyside6.qtconcurrent]
+  ubuntu:
+    oracular: [python3-pyside6.qtconcurrent]
+python3-pyside6.qtcore:
+  debian:
+    sid: [python3-pyside6.qtcore]
+  ubuntu:
+    oracular: [python3-pyside6.qtcore]
+python3-pyside6.qtdatavisualization:
+  debian:
+    sid: [python3-pyside6.qtdatavisualization]
+  ubuntu:
+    oracular: [python3-pyside6.qtdatavisualization]
+python3-pyside6.qtgui:
+  debian:
+    sid: [python3-pyside6.qtgui]
+  ubuntu:
+    oracular: [python3-pyside6.qtgui]
+python3-pyside6.qtqml:
+  debian:
+    sid: [python3-pyside6.qtqml]
+  ubuntu:
+    oracular: [python3-pyside6.qtqml]
+python3-pyside6.qttest:
+  debian:
+    sid: [python3-pyside6.qttest]
+  ubuntu:
+    oracular: [python3-pyside6.qttest]
+python3-pyside6.qtwidgets:
+  debian:
+    sid: [python3-pyside6.qtwidgets]
+  ubuntu:
+    oracular: [python3-pyside6.qtwidgets]
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
