fix Fedora/RHEL rosdep for `libudev-devel`

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6233,11 +6233,11 @@ libturbojpeg:
 libudev-dev:
   arch: [systemd]
   debian: [libudev-dev]
-  fedora: [libudev-devel]
+  fedora: [systemd-devel]
   gentoo: [virtual/libudev]
   nixos: [udev]
   openembedded: [udev@openembedded-core]
-  rhel: [libudev-devel]
+  rhel: [systemd-devel]
   ubuntu: [libudev-dev]
 libunittest++:
   arch: [unittestpp]
