ros_babel_fish: 0.9.3-1 in 'rolling/distribution.yaml' [bloom]

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6138,6 +6138,20 @@ repositories:
       url: https://github.com/osrf/ros2launch_security.git
       version: main
     status: maintained
+  ros_babel_fish:
+    release:
+      packages:
+      - ros_babel_fish
+      - ros_babel_fish_test_msgs
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/ros_babel_fish-release.git
+      version: 0.9.3-1
+    source:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: jazzy
+    status: developed
   ros_battery_monitoring:
     doc:
       type: git
