--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1237,6 +1237,20 @@ repositories:
       url: https://github.com/luxonis/depthai-core.git
       version: ros-release
     status: developed
+  depthai-ros:
+    release:
+      packages:
+      - depthai-ros
+      - depthai_bridge
+      - depthai_descriptions
+      - depthai_examples
+      - depthai_filters
+      - depthai_ros_driver
+      - depthai_ros_msgs
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/luxonis/depthai-ros-release.git
+      version: 2.10.0-1
   depthimage_to_laserscan:
     doc:
       type: git
