--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1238,6 +1238,10 @@ repositories:
       version: ros-release
     status: developed
   depthai-ros:
+    doc:
+      type: git
+      url: https://github.com/luxonis/depthai-ros.git
+      version: jazzy
     release:
       packages:
       - depthai-ros
@@ -1251,6 +1255,12 @@ repositories:
         release: release/jazzy/{package}/{version}
       url: https://github.com/luxonis/depthai-ros-release.git
       version: 2.10.0-1
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/luxonis/depthai-ros.git
+      version: jazzy
+    status: developed
   depthimage_to_laserscan:
     doc:
       type: git
